sprint6 (final1 review)